tests/typing/bad/testfile-comparison-5.c

struct S { int a; };
int main() { int x; struct S s; 1 == s; }
